feat: Add ORAS Blogs

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,17 +1,23 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
+slasker:
+  name: Steve Lasker
+  title: ORAS Maintainer
+  url: https://github.com/SteveLasker
+  image_url: https://github.com/SteveLasker.png
 
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
+fzhou:
+  name: Feynman Zhou
+  title: ORAS Maintainer
+  url: https://github.com/FeynmanZhou
+  image_url: https://github.com/FeynmanZhou.png
 
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
+yzha:
+  name: Yi Zha
+  title:  Engineer, Microsoft
+  url: https://github.com/yizha1
+  image_url: https://github.com/yizha1.png
+
+mbenoit:
+  name: Mathieu Benoit
+  title: DevRel Engineer, Google
+  url: https://github.com/mathieu-benoit
+  image_url: https://github.com/mathieu-benoit.png
