--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-fast-marquee": "^1.3.5"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.3.1"
+    "@docusaurus/module-type-aliases": "2.3.1",
+    "netlify-plugin-cache": "^1.0.3"
   },
   "browserslist": {
     "production": [
